Fix for safari bug. Not wrapping flex items in row correctly.

--- a/css/style.css
+++ b/css/style.css
@@ -439,9 +439,9 @@ a {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+  -webkit-flex: 1 0 60px;
+  -ms-flex: 1 0 60px;
+  flex: 1 0 60px;
   min-width: 60px;
   max-width: 60px;
   margin: 6px;
